--- a/2_code/2_experiment/21_setup_sfincs_models.ipynb
+++ b/2_code/2_experiment/21_setup_sfincs_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,18 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-02-26 15:20:04,216 - update - log - DEBUG - Writing log messages to new file ../../3_models/SFINCS\\00_base_100m_v2\\hydromt.log.\n",
-      "2022-02-26 15:20:04,217 - update - log - INFO - HydroMT version: 0.4.5.dev\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# model and data paths\n",
     "model_root = r'../../3_models/SFINCS'\n",
@@ -62,7 +53,7 @@
     "# build model base layers\n",
     "region = {'bbox': [34.33,-20.12,34.95,-19.30]}\n",
     "res = 100 # resolution [m]\n",
-    "opt = configread('build_sfincs.ini', abs_path=True)\n",
+    "opt = configread('build_sfincs2.ini', abs_path=True)\n",
     "kwargs = opt.pop('global',{})\n",
     "mod = SfincsModel(root=base_root, data_libs=data_libs, logger=logger, **kwargs)\n",
     "mod.build(region=region, res=res, opt=opt)\n",
@@ -79,10 +70,10 @@
     "base_root = join(model_root, \"00_base_100m\")\n",
     "runs = [\n",
     "    (1, {'rivdph_method': 'powlaw'}, {}),\n",
-    "    (2, {'rivdph_method': 'powlaw', 'hc': 0.405}, {}),  # 2x river depth\n",
+    "    (2, {'rivdph_method': 'powlaw', 'hc': 0.405}, {}),  # 1.5x river depth\n",
     "    (2, {'rivdph_method': 'powlaw', 'hc': 0.135}, {}),   # 0.5x river depth\n",
-    "    (3, {'rivdph_method': 'powlaw'}, {'lnd_man': 0.05}),\n",
-    "    (3, {'rivdph_method': 'powlaw'}, {'lnd_man': 0.15}),\n",
+    "    (3, {'rivdph_method': 'powlaw'}, {'lnd_man': 0.15}),  # 1.5x land manning\n",
+    "    (3, {'rivdph_method': 'powlaw'}, {'lnd_man': 0.05}),  # 0.5x land manning\n",
     "    # (2, {'rivdph_method': 'manning'}, {}),\n",
     "    # (3, {'rivdph_method': 'gvf'}, {}),\n",
     "    # (6, {'rivdph_method': 'powlaw', 'rivbank': False}, {}),  # relative to local cells (nstead of bank)\n",
@@ -198,7 +189,7 @@
     "import os\n",
     "## prepare compound runs\n",
     "\n",
-    "base_root = join(model_root, \"01_rivpowlaw\")\n",
+    "base_root = join(model_root, \"02_rivpowlaw_hc0.405\")\n",
     "for event in ['idai', 'eloise']:\n",
     "    mod = SfincsModel(join(base_root, event), mode='r', data_libs=data_libs)\n",
     "    config = mod.config.copy()\n",
@@ -252,8 +243,8 @@
     "        'q': ['dis', 'htide', 'noprecip'],\n",
     "        'h': ['disclim', 'htot', 'noprecip'],\n",
     "        'p': ['disclim', 'htide', 'precip'],\n",
-    "        'base': ['disclim', 'htide', 'noprecip'],\n",
-    "        'qh': ['dis', 'htot', 'noprecip'],\n",
+    "        # 'base': ['disclim', 'htide', 'noprecip'],\n",
+    "        # 'qh': ['dis', 'htot', 'noprecip'],\n",
     "        }\n",
     "    for run, (q, h, p) in cmpd_runs.items():\n",
     "        root = join(base_root, f'{event}_{run}')\n",
@@ -286,18 +277,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "38\n",
-      "1/38: ../../3_models/SFINCS\\01_rivpowlaw\\eloise\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# run models\n",
     "from os.path import dirname\n",
