--- a/2_code/2_experiment/22_setup_cmf_models.ipynb
+++ b/2_code/2_experiment/22_setup_cmf_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
     "da_lst = []\n",
     "nlayers = {'nextxy': 2, 'lonlat': 2}\n",
     "dtypes = {'nextxy': 'i4', 'basin': 'i4'}\n",
-    "for name in ['nextxy', 'lonlat', 'uparea', 'rivhgt', 'rivwth_gwdlr', 'basin']: # 'rivdph1_hc27_hp30', 'rivwth_est']:\n",
+    "for name in ['elevtn', 'nextxy', 'lonlat', 'uparea', 'rivhgt', 'rivwth_gwdlr', 'basin', 'rivdph_hc0.27_hp0.3']:\n",
     "    shape0 = (nlayers[name], shape[0], shape[1]) if name in nlayers else shape\n",
     "    dtype = dtypes.get(name, 'f4')\n",
     "    da = hydromt.raster.RasterDataArray.from_numpy(\n",
@@ -75,12 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "ds['uparea'].raster.set_nodata(nodata)\n",
-    "ds['uparea'].raster.to_raster(join(mdir, 'uparea.tif'))"
+    "ds['uparea'].raster.to_raster(join(mdir, 'uparea.tif'))\n",
+    "ds['elevtn'].raster.to_raster(join(mdir, 'elevtn.tif'))\n",
+    "ds['rivdph_hc0.27_hp0.3'].raster.to_raster(join(mdir, 'rivdph_hc0.27_hp0.3.tif'))"
    ]
   },
   {
