--- a/2_code/3_postprocess/32_postprocess_simulations.ipynb
+++ b/2_code/3_postprocess/32_postprocess_simulations.ipynb
@@ -47,10 +47,8 @@
     "# mod0 = SfincsModel(runs[0], mode='r')\n",
     "# print(runs)\n",
     "\n",
-    "cmpd_runs = ['q', 'h', 'p', 'base'] # ['qh']\n",
-    "keys = [''] + [f'_{k}' for k in cmpd_runs]\n",
     "for event, date in events.items():\n",
-    "    runs = glob.glob(join(root0, '*', f'{event}*', 'sfincs_map.nc'))\n",
+    "    runs = glob.glob(join(root0, '0*', f'{event}*', 'sfincs_map.nc'))\n",
     "    print(event)\n",
     "    da_lst, da_lst1, names = [], [], []\n",
     "    for run in runs:\n",
@@ -82,7 +80,7 @@
     "    da = xr.concat(da_lst1, dim='run')\n",
     "    da['run'] = xr.IndexVariable('run', names)\n",
     "    da.to_netcdf(join(root0, f'flddph_{event}{postfix}_max.nc'), encoding=encoding)\n",
-    "    # break\n"
+    "    # break"
    ]
   },
   {
