--- a/2_code/4_analyze_plot/41_plot_models.ipynb
+++ b/2_code/4_analyze_plot/41_plot_models.ipynb
@@ -185,22 +185,12 @@
     "    ds_sfx[\"dep\"].raster.mask_nodata().quantile([0.0, 0.98]).values\n",
     ")\n",
     "c_bat = plt.cm.terrain(np.linspace(0, 0.17, 256))\n",
-    "c_dem = plt.cm.terrain(np.linspace(0.25, 1, 256))\n",
+    "c_dem = plt.cm.terrain(np.linspace(0.25, 0.9, 256))\n",
     "c_all = np.vstack((c_bat, c_dem))\n",
     "cmap = colors.LinearSegmentedColormap.from_list(\"bat_dem\", c_all)\n",
     "norm = colors.TwoSlopeNorm(vmin=vmin, vcenter=0, vmax=vmax)\n",
     "da_dep = ds_sfx['dep'].where(ds_sfx['dep']!=ds_sfx['dep'].raster.nodata)\n",
     "da_dep.attrs.update(unit='m+EGM96')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74efce3d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf_cmf_riv['uparea10']"
    ]
   },
   {
@@ -277,26 +267,27 @@
     "    frameon=True,\n",
     ")\n",
     "ax.add_artist(ScaleBar(1, location='lower right', box_alpha=0.0))\n",
-    "ax.set_title('a) CaMa-Flood Model')\n",
+    "ax.set_title('A) CaMa-Flood model - rivers')\n",
     "\n",
     "## SFINCS ##\n",
     "\n",
     "extent = np.array(gdf_region.buffer(1000).total_bounds)[[0, 2, 1, 3]]\n",
     "ax1.set_extent(extent, crs=utm)\n",
     "cs = da_dep.plot(ax=ax1, cmap=cmap, norm=norm, zorder=2, add_colorbar=True, cbar_kwargs=dict(shrink=0.5, anchor=(0,0.1)))\n",
-    "gdf_bnd.plot(ax=ax1, marker=\"^\", markersize=75, c=\"w\", edgecolor=\"k\", label='waterlevel bound.', zorder=4)\n",
+    "gdf_bnd.plot(ax=ax1, marker=\"^\", markersize=60, c=\"w\", edgecolor=\"k\", label='waterlevel bound.', zorder=4)\n",
     "for label, grow in gdf_bnd.iterrows():\n",
     "    x, y = grow.geometry.x, grow.geometry.y\n",
     "    ax1.annotate(f'H{label}', xy=(x, y), **ann_kwargs)\n",
-    "gdf_src.plot(ax=ax1, marker=\">\", markersize=75, c=\"w\", edgecolor=\"k\", label='discharge bound.', zorder=4)\n",
+    "gdf_src.plot(ax=ax1, marker=\">\", markersize=60, c=\"w\", edgecolor=\"k\", label='discharge bound.', zorder=4)\n",
     "for label, grow in gdf_src.iterrows():\n",
     "    x, y = grow.geometry.x, grow.geometry.y\n",
     "    ax1.annotate(f'Q{label}', xy=(x, y), **ann_kwargs)\n",
-    "gdf_points.plot(ax=ax1, marker='o', markersize=25, c=\"b\", edgecolor=\"b\", label='model obs. point', zorder=4)\n",
+    "gdf_points.plot(ax=ax1, marker='d', markersize=60, c=\"w\", edgecolor=\"k\", label='model obs. point', zorder=4)\n",
     "for label, grow in gdf_points.iterrows():\n",
     "    x, y = grow.geometry.x, grow.geometry.y\n",
     "    ax1.annotate(f'{label}', xy=(x, y), **ann_kwargs)\n",
-    "gdf_riv.boundary.plot(ax=ax1, ls='--', lw=0.5, color='k', alpha=0.5, label='rivers')\n",
+    "ax1.text(0.8, 0.15, 'Indian Ocean', rotation=30, transform=ax1.transAxes)\n",
+    "gdf_riv.boundary.plot(ax=ax1, ls='--', lw=0.5, color='k', alpha=0.5, label='river outline')\n",
     "    \n",
     "# towns\n",
     "gdf.plot(ax=ax1, marker='.', markersize=40, color=\"k\", label='towns / cities', zorder=4)\n",
@@ -322,7 +313,7 @@
     "    frameon=True,\n",
     ")\n",
     "ax1.add_artist(ScaleBar(1, location='lower right', box_alpha=0.0))\n",
-    "ax1.set_title('b) SFINCS model domain')\n",
+    "ax1.set_title('B) SFINCS model - elevation')\n",
     "\n",
     "#\n",
     "fig.subplots_adjust(wspace=0.04)\n",
