--- a/2_code/4_analyze_plot/42_plot_forcing.ipynb
+++ b/2_code/4_analyze_plot/42_plot_forcing.ipynb
@@ -18,11 +18,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# FIXME\n",
-    "mod0 = SfincsModel('../02_models/beira/sfincs/03_11_htot_dis_precip', mode='r', deltares_data=True)\n",
-    "mod1 = SfincsModel('../02_models/beira/sfincs/03_17_htide_disclim_precip', mode='r', deltares_data=True)\n",
-    "trange = slice('20210118T0000','20210128T0000')\n",
-    "event = 'eloise'"
+    "model_root = r'../../3_models/SFINCS'\n",
+    "fdir = r'../../4_results'\n",
+    "base_root = join(model_root, \"01_rivpowlaw\")\n",
+    "events = {'idai': ('20190314', '20190322'), 'eloise':('20210119', '20210128')}\n",
+    "scens = {'h': ['bzs'], 'q': ['dis'], 'p': ['netampr', 'dis', 'bzs']}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read data\n",
+    "forcing = {}\n",
+    "for event, dates in events.items():\n",
+    "    forcing[event] = {}\n",
+    "    forcing[f'{event}_base'] = {}\n",
+    "    for scen, fnames in scens.items():\n",
+    "        mod = SfincsModel(join(base_root, f'{event}_{scen}'), mode='r')\n",
+    "        forcing[event][f'{fnames[0]}'] = mod.forcing[fnames[0]].load()\n",
+    "        for fname in fnames[1:]:\n",
+    "            forcing[f'{event}_base'][f'{fname}'] = mod.forcing[fname].load()"
    ]
   },
   {
@@ -33,82 +51,123 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates as mdates\n",
-    "forcing = mod0.forcing\n",
+    "import pandas as pd\n",
+    "\n",
     "kwargs=dict()\n",
-    "\n",
     "colors = ['#377eb8', '#ff7f00', '#4daf4a', '#f781bf', '#a65628', '#984ea3', '#999999', '#e41a1c', '#dede00']\n",
-    "\n",
-    "n = len(forcing.keys())\n",
-    "kwargs0 = dict(sharex=True, figsize=(9, n * 3))\n",
+    "kwargs0 = dict(figsize=(14, 9))\n",
     "kwargs0.update(**kwargs)\n",
-    "fig, axes = plt.subplots(n, 1, **kwargs0)\n",
-    "axes = [axes] if n == 1 else axes\n",
-    "for i, name in enumerate(forcing):\n",
-    "    da = forcing[name].sel(time=trange)\n",
-    "    longname = da.attrs.get(\"standard_name\", \"\")\n",
-    "    unit = da.attrs.get(\"unit\", \"\")\n",
-    "    prefix = \"\"\n",
-    "    if da.ndim == 3:\n",
-    "        da = da.mean(dim=[da.raster.x_dim, da.raster.y_dim])\n",
-    "        prefix = \"mean \"\n",
-    "    # convert to Single index dataframe (bar plots don't work with xarray)\n",
-    "    df = da.squeeze().to_series()\n",
-    "    if isinstance(df.index, pd.MultiIndex):\n",
-    "        df = df.unstack(0)\n",
-    "    # convert dates a-priori as automatic conversion doesn't always work\n",
-    "    df.index = mdates.date2num(df.index)\n",
-    "    if longname == \"precipitation\":\n",
-    "        axes[i].bar(df.index, df.values, facecolor=\"darkblue\")\n",
-    "        longname = 'runoff'\n",
-    "    else:\n",
-    "        # tide / disclim\n",
-    "        da1 = mod1.forcing[name].sel(time=trange)\n",
-    "        df1 = da1.squeeze().to_series().unstack(0)\n",
-    "        df1.index = mdates.date2num(df1.index)\n",
-    "        \n",
-    "        bound = 'H' if longname == 'waterlevel' else 'Q'\n",
-    "        cols = [1] if longname == 'waterlevel' else [0,3]\n",
-    "        ylim = [df.values.min()*1.05, df.values.max()*1.3] if longname == 'waterlevel' else [0, df.values.max()*1.3]\n",
-    "        j0 = 0 if longname == 'waterlevel' else 1\n",
-    "        \n",
-    "        # plot actual\n",
-    "        suffix = 'tot' if longname == 'waterlevel' else 'event'\n",
-    "        df.columns = [f'{bound}{i} - {suffix}' for i in df.columns.values]\n",
-    "        for j, col in enumerate(df.columns[cols]):\n",
-    "            df.loc[:,col].plot.line(ax=axes[i], c=colors[j+j0], label=col)\n",
+    "fig, axes = plt.subplots(3, 2, **kwargs0)\n",
+    "\n",
+    "\n",
+    "for j, (event, dates) in enumerate(events.items()):\n",
+    "    trange = slice(*dates)\n",
+    "    locator = mdates.AutoDateLocator()\n",
+    "    formatter = mdates.ConciseDateFormatter(locator)\n",
+    "    for i, name in enumerate(forcing[event]):\n",
+    "        da = forcing[event][name].sel(time=trange)\n",
+    "        longname = da.attrs.get(\"standard_name\", \"\")\n",
+    "        unit = da.attrs.get(\"unit\", \"\")\n",
+    "        prefix = \"\"\n",
+    "        if da.ndim == 3:\n",
+    "            da = da.mean(dim=[da.raster.x_dim, da.raster.y_dim])\n",
+    "            prefix = \"mean \"\n",
+    "        # convert to Single index dataframe (bar plots don't work with xarray)\n",
+    "        df = da.squeeze().to_series()\n",
+    "        if isinstance(df.index, pd.MultiIndex):\n",
+    "            df = df.unstack(0)\n",
+    "        ylim = [0, df.values.max()*1.05]\n",
+    "        # convert dates a-priori as automatic conversion doesn't always work\n",
+    "        df.index = mdates.date2num(df.index)\n",
+    "        if longname == \"precipitation\":\n",
+    "            longname = 'runoff'\n",
+    "            axes[i,j].bar(df.index, df.values, facecolor=\"darkblue\", label='spatial avg.')\n",
+    "        else:\n",
+    "            # tide / disclim\n",
+    "            da1 = forcing[f'{event}_base'][name].sel(time=trange)\n",
+    "            df1 = da1.squeeze().to_series().unstack(0)\n",
+    "            df1.index = mdates.date2num(df1.index)\n",
     "            \n",
-    "        # plot tide/clim\n",
-    "        suffix = 'tide' if longname == 'waterlevel' else 'clim.'\n",
-    "        df1.columns = [f'{bound}{i} - {suffix}' for i in df1.columns.values]\n",
-    "        for j, col in enumerate(df1.columns[cols]):\n",
-    "            df1.loc[:,col].plot.line(ax=axes[i], ls='--', color=colors[j+j0], label=col)\n",
+    "            if longname == 'waterlevel':\n",
+    "                dh = 0.8  # undo EGM correction\n",
+    "                unit = 'm+MSL'\n",
+    "                df1, df = df1 - dh, df - dh\n",
+    "                ylim = [df.values.min()*1.05, df.values.max()*1.05]\n",
+    "                # argmax = df.max(0).argmax()\n",
+    "                # print(argmax)\n",
+    "\n",
+    "            bound = 'H' if longname == 'waterlevel' else 'Q'\n",
+    "            cols = [3] if longname == 'waterlevel' else [0,3]\n",
+    "            icol0 = 0 if longname == 'waterlevel' else 1\n",
     "\n",
     "\n",
-    "        axes[i].legend(\n",
-    "#             title=\"index\",\n",
-    "            bbox_to_anchor=(1, 1),\n",
-    "            loc=\"upper right\",\n",
-    "            ncol=2,\n",
-    "        )\n",
-    "        axes[i].set_ylim(ylim)\n",
+    "            # plot actual\n",
+    "            suffix = 'tot' if longname == 'waterlevel' else 'event'\n",
+    "            df.columns = [f'{bound}{ib} - {suffix}' for ib in df.columns.values]\n",
+    "            for icol, col in enumerate(df.columns[cols]):\n",
+    "                df.loc[:,col].plot.line(ax=axes[i,j], c=colors[icol+icol0], label=col)\n",
+    "                \n",
+    "            # plot tide/clim\n",
+    "            suffix = 'tide' if longname == 'waterlevel' else 'clim.'\n",
+    "            df1.columns = [f'{bound}{ib} - {suffix}' for ib in df1.columns.values]\n",
+    "            for icol, col in enumerate(df1.columns[cols]):\n",
+    "                df1.loc[:,col].plot.line(ax=axes[i,j], ls='--', color=colors[icol+icol0], label=col)\n",
     "\n",
-    "    axes[i].set_ylabel(f\"{prefix}{longname}\\n[{unit}]\")\n",
-    "    axes[i].set_title(f\"{longname} boundary\")\n",
-    "    axes[i].set_xlim([df.index[0], df.index[-1]])\n",
     "\n",
-    "# use a concise date formatter for format date axis ticks\n",
-    "locator = mdates.AutoDateLocator()\n",
-    "formatter = mdates.ConciseDateFormatter(locator)\n",
-    "axes[-1].xaxis.set_major_locator(locator)\n",
-    "axes[-1].xaxis.set_major_formatter(formatter)\n",
+    "        if j == 1:\n",
+    "            ylim = axes[i,0].get_ylim()\n",
+    "            axes[i,j].legend(\n",
+    "                bbox_to_anchor=(1, 1),\n",
+    "                loc=\"upper right\",\n",
+    "                ncol=2,\n",
+    "            )\n",
     "\n",
-    "plt.savefig(join('figs', f'forcing_{event}.png'), dpi=225, bbox_inches=\"tight\")"
+    "        axes[i,j].set_ylim(ylim)\n",
+    "        if j == 0:\n",
+    "            axes[i,j].set_ylabel(f\"{prefix}{longname}\\n[{unit}]\")\n",
+    "        else:\n",
+    "            axes[i,j].set_yticklabels('')\n",
+    "\n",
+    "        axes[i,j].set_xlim([df.index[0], df.index[-1]])\n",
+    "        axes[i,j].xaxis.set_major_locator(locator)\n",
+    "        axes[i,j].xaxis.set_major_formatter(formatter)\n",
+    "        if i != 2:\n",
+    "            axes[i,j].set_xticklabels('')\n",
+    "        if i == 0:\n",
+    "            axes[i,j].set_title(event.capitalize())\n",
+    "\n",
+    "fig.subplots_adjust(wspace=0.05) \n",
+    "plt.savefig(join(fdir, f'forcing.png'), dpi=225, bbox_inches=\"tight\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "dc0994946103a4a9202e7a48444db4b9747772261f089f42618eeb067054486d"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.4 ('hydromt-dev')",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.4"
   },
   "orig_nbformat": 4
  },
