--- a/2_code/4_analyze_plot/43_floodextent_analysis.ipynb
+++ b/2_code/4_analyze_plot/43_floodextent_analysis.ipynb
@@ -33,7 +33,7 @@
     "fdir = r'../../4_results'\n",
     "mdir = r'../../3_models/SFINCS'\n",
     "mdir1 = r'../../3_models/CMF'\n",
-    "hmin=0.25\n"
+    "hmin=0.15"
    ]
   },
   {
@@ -63,6 +63,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "cmf_rm = {\n",
+    "    '01_powlaw_06min': '7. spatial res: 200%',\n",
+    "    '05_powlaw_bf0_03min': '6b. bifurcations: 0% (off)',\n",
+    "    '04_powlaw_bf5_03min': '6a. bifurcations: 50%',\n",
+    "    '08_ro120_03min': '5b. P & Q forcing: 120%',\n",
+    "    '08_ro80_03min': '5a. P & Q forcing: 80%',\n",
+    "    '09_h120_03min': '4b. H forcing: 120%',\n",
+    "    '09_h80_03min': '4a. H forcing: 80%',\n",
+    "    '07_powlaw_fldman15_03min': '3b. land manning: 150%',\n",
+    "    '06_powlaw_fldman05_03min': '3a. land manning: 50%',\n",
+    "    '02_powlaw_hp405_03min': '2b. river depth: 150%',\n",
+    "    '03_powlaw_hp135_03min': '2a. river depth: 50%',\n",
+    "    '01_powlaw_03min': '1. default',\n",
+    "}\n",
+    "sfx_rm = {\n",
+    "    '01_rivpowlaw_qp_x120': '5b. P & Q forcing: 120%',\n",
+    "    '01_rivpowlaw_qp_x80': '5a. P & Q forcing: 80%',\n",
+    "    '01_rivpowlaw_h_x120': '4b. H forcing: 120%',\n",
+    "    '01_rivpowlaw_h_x80': '4a. H forcing: 80%',\n",
+    "    '03_rivpowlaw_lnd0.15': '3b. land manning: 150%',\n",
+    "    '03_rivpowlaw_lnd0.05': '3a. land manning: 50%',\n",
+    "    '02_rivpowlaw_hc0.405': '2b. river depth: 150%',\n",
+    "    '02_rivpowlaw_hc0.135': '2a. river depth: 50%',\n",
+    "    '01_rivpowlaw': '1. default',\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sfx_skill, cmf_skill = {}, {}\n",
+    "\n",
     "for event, date in events.items():\n",
     "    dfs = []\n",
     "    for postfix in ['_100m', '_50m']:\n",
@@ -72,17 +108,8 @@
     "        df_skill = da_skill.reset_coords(drop=True).to_dataframe()\n",
     "        dfs.append(df_skill)\n",
     "    df_skill = pd.concat(dfs, axis=0, ignore_index=False)\n",
-    "    df_skill.to_csv(join(mdir, f'flddph_{event}_skill_hmin{hmin}.csv'))\n",
-    "    print(df_skill)\n",
-    "    # break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    sfx_skill[event] = df_skill.loc[sfx_rm.keys()].rename(sfx_rm).drop(columns='E')\n",
+    "\n",
     "# validate CMF\n",
     "postfix = '_100m'\n",
     "for event, date in events.items():\n",
@@ -90,9 +117,13 @@
     "    da_sim = xr.open_dataarray(join(mdir1, f'flddph_{event}.nc'))\n",
     "    da_skill, da_cm = skill(da_sim, da_obs, msk[postfix], hmin=hmin)\n",
     "    df_skill = da_skill.reset_coords(drop=True).to_dataframe()\n",
-    "    df_skill.to_csv(join(mdir1, f'flddph_{event}_skill_hmin{hmin}.csv'))\n",
-    "    print(df_skill)\n",
-    "    # break"
+    "    cmf_skill[event] = df_skill.loc[cmf_rm.keys()].rename(cmf_rm).drop(columns='E')\n",
+    "\n",
+    "dfs = []\n",
+    "for event in events:\n",
+    "    df1 = pd.concat([cmf_skill[event],sfx_skill[event]],axis=1,keys=['CMF', 'SFINCS']).swaplevel(0,1,axis=1).sort_index(axis=0).sort_index(axis=1)\n",
+    "    dfs.append(df1)\n",
+    "df1 = pd.concat(dfs, axis=1, keys=events.keys())"
    ]
   },
   {
@@ -101,8 +132,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot\n",
-    "\n"
+    "df2 = df1.copy()\n",
+    "df2.iloc[1:,:] = (df1.iloc[1:,]-df1.iloc[0,])\n",
+    "df2.round(2).to_clipboard()"
    ]
   },
   {
@@ -116,7 +148,9 @@
     "riv_mask = hydromt.open_raster(join(mdir, '01_rivpowlaw', 'gis', 'rivmsk.tif'))\n",
     "riv_mask.raster.set_nodata(0)\n",
     "gdf_riv = riv_mask.where(~dep_mask, 0).raster.vectorize()\n",
-    "gdf_towns = gpd.read_file(r'../../1_data/towns.geojson').set_index('index').to_crs(gdf_riv.crs)"
+    "gdf_towns = gpd.read_file(r'../../1_data/towns.geojson').set_index('index').to_crs(gdf_riv.crs)\n",
+    "gdf_points = gpd.read_file(join(mdir, '01_rivpowlaw', 'gis', 'obs.geojson'))\n",
+    "gdf_points.index = gdf_points.index+1"
    ]
   },
   {
@@ -125,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hmin=0.25\n",
+    "# hmin=0.25\n",
     "scores = {'cmf': {}, 'sfx': {}}\n",
     "res = {'cmf': {}, 'sfx': {}}\n",
     "hmax_sim = {'cmf': {}, 'sfx': {}}\n",
@@ -140,7 +174,7 @@
     "    da_obs = hydromt.open_raster(join(roots[postfix], 'gis', f'flooding_{date}.tif')).load()\n",
     "    da_sfx = xr.open_dataarray(join(mdir, f'flddph_{event}{postfix}.nc')).sel(run=run).raster.flipud().load()\n",
     "    scores['sfx'][date],  res['sfx'][date] = skill(da_sfx, da_obs, msk[postfix], hmin=hmin)\n",
-    "    hmax_sim['sfx'][date] = da_sfx.where(~msk[postfix])\n"
+    "    hmax_sim['sfx'][date] = da_sfx.where(~msk[postfix])"
    ]
   },
   {
@@ -200,7 +234,7 @@
     "        ax = axs[i]\n",
     "        da_cm = res[mod][date].load()\n",
     "        da_skill = scores[mod][date].load()\n",
-    "        hr, csi, fr = da_skill['H'].item(), da_skill['C'].item(), da_skill['F'].item()\n",
+    "        hr, csi, fr = round(da_skill['H'].item(),2), round(da_skill['C'].item(),2), round(da_skill['F'].item(),2)\n",
     "\n",
     "        da_cm.raster.set_crs(gdf_riv.crs)\n",
     "        da_msk.raster.set_crs(gdf_riv.crs)\n",
@@ -214,7 +248,7 @@
     "            x, y = grow.geometry.x, grow.geometry.y\n",
     "            ax.plot(x,y, '.k', markersize=4)\n",
     "            ax.annotate(f'{label}', xy=(x, y), **ann_kwargs)\n",
-    "        ax.text(0.01, 0.95, abcd[i].upper(), fontsize=14, fontweight='bold', transform=ax.transAxes, bbox=props)\n",
+    "        ax.text(0.03, 0.95, abcd[i].upper(), fontsize=14, fontweight='bold', transform=ax.transAxes, bbox=props)\n",
     "            \n",
     "        ax.yaxis.set_visible(True)\n",
     "        ax.xaxis.set_visible(True)\n",
@@ -225,7 +259,7 @@
     "        else:\n",
     "            ax.set_ylabel('')\n",
     "        \n",
-    "        ax.set_title(f'{d[mod]} - {event} ({date})')\n",
+    "        ax.set_title(f'{d[mod]} - {event.capitalize()}')\n",
     "        if i >= len(axs)-2:\n",
     "            ax.set_xlabel(f\"x coordinate UTM zone {utm_zone} [m]\")   \n",
     "        else:\n",
@@ -233,16 +267,16 @@
     "            \n",
     "ax.set_xticks(ax.get_xticks()[::2])\n",
     "ax.set_extent(extent, crs=utm)\n",
-    "fig.subplots_adjust(wspace=0.05, hspace=0.06)\n",
+    "fig.subplots_adjust(wspace=0.04, hspace=0.06)\n",
     "\n",
     "# # Add a colorbar axis at the bottom of the graph\n",
     "cbar_ax = fig.add_axes([0.93, 0.33, 0.015, 0.3])\n",
     "\n",
     "# # Draw the colorbar\n",
     "cbar=fig.colorbar(cs, cax=cbar_ax, orientation='vertical', ticks=ticks)\n",
-    "cbar_ax.set_yticklabels(ticklabs)\n",
+    "cbar_ax.set_yticklabels(ticklabs, va='center', rotation=90)\n",
     "\n",
-    "plt.savefig(join(fdir, f'validation_hmin25_100m.png'), dpi=500, bbox_inches=\"tight\")"
+    "plt.savefig(join(fdir, f'validation_hmin{int(hmin*100)}_100m.png'), dpi=500, bbox_inches=\"tight\")"
    ]
   },
   {
@@ -251,7 +285,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "fig, axs = plt.subplots(\n",
     "    figsize=(9,12),\n",
     "    nrows=2, ncols=2,\n",
@@ -259,7 +292,6 @@
     "    sharex = True, sharey=True\n",
     ")\n",
     "axs = axs.flatten()\n",
-    "hmin=0.1\n",
     "for col, (event, date) in enumerate(events.items()):\n",
     "    for row, mod in enumerate(['cmf', 'sfx']):\n",
     "        i = int(row*2 + col)\n",
@@ -280,7 +312,11 @@
     "            x, y = grow.geometry.x, grow.geometry.y\n",
     "            ax.plot(x,y, '.k', markersize=4)\n",
     "            ax.annotate(f'{label}', xy=(x, y), **ann_kwargs)\n",
-    "        ax.text(0.01, 0.95, abcd[i].upper(), fontsize=14, fontweight='bold', transform=ax.transAxes, bbox=props)\n",
+    "        for label, grow in gdf_points.iterrows():\n",
+    "            x, y = grow.geometry.x, grow.geometry.y\n",
+    "            ax.plot(x,y, marker='d', markersize=8, markerfacecolor='w', color='k')\n",
+    "            ax.annotate(f'{label}', xy=(x, y), **ann_kwargs)\n",
+    "        ax.text(0.03, 0.95, abcd[i].upper(), fontsize=14, fontweight='bold', transform=ax.transAxes, bbox=props)\n",
     "            \n",
     "        ax.yaxis.set_visible(True)\n",
     "        ax.xaxis.set_visible(True)\n",
@@ -290,7 +326,7 @@
     "        else:\n",
     "            ax.set_ylabel('')\n",
     "        \n",
-    "        ax.set_title(f'{d[mod]} - {event} ({date})')\n",
+    "        ax.set_title(f'{d[mod]} - {event.capitalize()}')\n",
     "        if i >= len(axs)-2:\n",
     "            ax.set_xlabel(f\"x coordinate UTM zone {utm_zone} [m]\")   \n",
     "        else:\n",
@@ -298,7 +334,7 @@
     "            \n",
     "ax.set_xticks(ax.get_xticks()[::2])\n",
     "ax.set_extent(extent, crs=utm)\n",
-    "fig.subplots_adjust(wspace=0.05, hspace=0.06)\n",
+    "fig.subplots_adjust(wspace=0.04, hspace=0.06)\n",
     "\n",
     "# # Add a colorbar axis at the bottom of the graph\n",
     "cbar_ax = fig.add_axes([0.93, 0.33, 0.015, 0.3])\n",
@@ -308,7 +344,7 @@
     "cbar=fig.colorbar(cs, cax=cbar_ax, orientation='vertical', ticks=ticks)\n",
     "cbar_ax.set_ylabel('maximum flood depth [m]')\n",
     "\n",
-    "plt.savefig(join(fdir, f'hmax_hmin25_100m.png'), dpi=500, bbox_inches=\"tight\")"
+    "plt.savefig(join(fdir, f'flddph_hmin{int(hmin*100)}_100m.png'), dpi=500, bbox_inches=\"tight\")"
    ]
   },
   {
@@ -320,38 +356,7 @@
     "## sensitivity analysis\n",
     "\n",
     "## barplots\n",
-    "## TODO different rows per event (to scale x axis)\n",
-    "import pandas as pd\n",
-    "cmf_rm = {\n",
-    "    '01_powlaw_06min': '6. spatial res: 200%',\n",
-    "    '05_powlaw_bf0_03min': '5b. bifurcations: 0% (off)',\n",
-    "    '04_powlaw_bf5_03min': '5a. bifurcations: 50%',\n",
-    "    '07_powlaw_fldman15_03min': '3b. land manning: 150%',\n",
-    "    '06_powlaw_fldman05_03min': '3a. land manning: 50%',\n",
-    "    '02_powlaw_hp405_03min': '2b. river depth: 150%',\n",
-    "    '03_powlaw_hp135_03min': '2a. river depth: 50%',\n",
-    "    '01_powlaw_03min': '1. default',\n",
-    "}\n",
-    "sfx_rm = {\n",
-    "    '01_rivpowlaw_qh': '4b. forcing: no P',\n",
-    "    '01_rivpowlaw_glofas': '4a. forcing: GLOFAS Q',\n",
-    "    '09_rivpowlaw_lnd0.15': '3b. land manning: 150%',\n",
-    "    '09_rivpowlaw_lnd0.05': '3a. land manning: 50%',\n",
-    "    '06_rivpowlaw_hc0.405': '2b. river depth: 150%',\n",
-    "    '06_rivpowlaw_hc0.135': '2a. river depth: 50%',\n",
-    "    '01_rivpowlaw': '1. default',\n",
-    "}\n",
-    "\n",
-    "sfx_skill, cmf_skill = {}, {}\n",
-    "hmin=0.25\n",
-    "for event in events:\n",
-    "    df = pd.read_csv(join(mdir, f'flddph_{event}_skill_hmin{hmin}.csv'), index_col=0)\n",
-    "    sfx_skill[event] = df.loc[sfx_rm.keys()].rename(sfx_rm).drop(columns='E')\n",
-    "    df= pd.read_csv(join(mdir1, f'flddph_{event}_skill_hmin{hmin}.csv'), index_col=0)\n",
-    "    cmf_skill[event] = df.loc[cmf_rm.keys()].rename(cmf_rm).drop(columns='E')\n",
-    "    df1 = pd.concat([cmf_skill[event],sfx_skill[event]],axis=1,keys=['CMF', 'SFINCS']).swaplevel(0,1,axis=1).sort_index(axis=0).sort_index(axis=1).round(3)\n",
-    "    df1.to_csv(join(fdir, f'sensitivity_{event}.csv'))\n",
-    "\n"
+    "## TODO different rows per event (to scale x axis)\n"
    ]
   },
   {
