--- a/2_code/4_analyze_plot/45_compound_analysis.ipynb
+++ b/2_code/4_analyze_plot/45_compound_analysis.ipynb
@@ -28,7 +28,7 @@
     "riv_mask = hydromt.open_raster(join(mdir, base, 'gis', 'rivmsk.tif'))\n",
     "riv_mask.raster.set_nodata(0)\n",
     "gdf_riv = riv_mask.where(~dep_mask, 0).raster.vectorize()\n",
-    "gdf_towns = gpd.read_file(r'../../1_data/towns.geojson')\n"
+    "gdf_towns = gpd.read_file(r'../../1_data/towns.geojson').set_index('index')\n"
    ]
   },
   {
@@ -37,12 +37,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hmin=0.25\n",
+    "hmin=0.15\n",
     "dh = 0.05\n",
+    "base ='02_rivpowlaw_hc0.405'\n",
     "\n",
     "da_sim, da_diff, da_cmpnd = {}, {}, {}\n",
     "for event in events:\n",
     "    da = xr.open_dataarray(join(mdir, f'flddph_{event.lower()}_100m_max.nc'))\n",
+    "    assert base in da.run.values\n",
     "    # select and rename runs to scenarios\n",
     "    runs = {r:r.replace(f'{base}_', '').replace(base, 'qhp') for r in da.run.values if (r.startswith(base) and 'glofas' not in r)}\n",
     "    da = da.sel(run=list(runs.keys()))\n",
@@ -179,7 +181,7 @@
     "cbar_ax.set_xticks([0,1])\n",
     "cbar_ax.set_xticklabels(['single', 'compound'], ha='center', rotation=60)\n",
     "\n",
-    "plt.savefig(join('../../4_results', f'compound_analysis_sfincs.png'), dpi=225, bbox_inches=\"tight\")"
+    "plt.savefig(join('../../4_results', f'{base}_compound_analysis_sfincs.png'), dpi=225, bbox_inches=\"tight\")"
    ]
   },
   {
